// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableArea[Base] should render correctly  1`] = `
<div
  class="c-f2oa57 soui-editableArea-wrapper"
  style="width: 300px;"
>
  <div
    class="cfblsbd soui-editableArea-place cp2c5tr soui-editableArea-wrapper-padding-box c-yxshg2 soui-editableArea-wrapper-inner-title-top cl72ucy soui-editableArea-wrapper-inner-title-bottom"
    tabindex="0"
  >
    <div
      class="c-pq2y5x soui-editableArea-content"
    >
      <span
        class="c-tfhjej soui-editableArea-placeholder"
      >
        input something
      </span>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  2`] = `
<div
  class="c-f2oa57 soui-editableArea-wrapper"
  style="width: 300px;"
>
  <div
    class="cfblsbd soui-editableArea-place cp2c5tr soui-editableArea-wrapper-padding-box c-yxshg2 soui-editableArea-wrapper-inner-title-top cl72ucy soui-editableArea-wrapper-inner-title-bottom"
    tabindex="0"
  >
    <div
      class="c-pq2y5x soui-editableArea-content"
    >
      i am a long text, i am a long text, i am a long text
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  3`] = `
<div
  id="popup-target"
  style="height: 100px; overflow-y: auto; position: relative; padding: 10px; margin-left: -10px;"
>
  <div
    style="height: 50px;"
  />
  <div
    class="c-f2oa57 soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="cfblsbd soui-editableArea-place cp2c5tr soui-editableArea-wrapper-padding-box c-yxshg2 soui-editableArea-wrapper-inner-title-top cl72ucy soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-pq2y5x soui-editableArea-content"
      >
        <span
          class="c-tfhjej soui-editableArea-placeholder"
        >
          scroll in container
        </span>
      </div>
    </div>
  </div>
  <div
    style="height: 140px;"
  />
</div>
`;

exports[`EditableArea[Base] should render correctly  4`] = `
<div>
  <div
    class="c-f2oa57 soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="cfblsbd soui-editableArea-place cp2c5tr soui-editableArea-wrapper-padding-box c-yxshg2 soui-editableArea-wrapper-inner-title-top cl72ucy soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-pq2y5x soui-editableArea-content"
      >
        <span
          class="c-tfhjej soui-editableArea-placeholder"
        >
          input something
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  5`] = `
<div>
  <div
    class="c-f2oa57 soui-editableArea-wrapper"
    style="width: 300px;"
  >
    <div
      class="cfblsbd soui-editableArea-place cp2c5tr soui-editableArea-wrapper-padding-box c-yxshg2 soui-editableArea-wrapper-inner-title-top cl72ucy soui-editableArea-wrapper-inner-title-bottom"
      tabindex="0"
    >
      <div
        class="c-pq2y5x soui-editableArea-content"
      >
        <div>
          Guessing what I inputed ?
        </div>
      </div>
    </div>
  </div>
</div>
`;
